@@ -1,3 +1,9 @@
+2004-10-22  Ito Kazumitsu  <kaz@maczuka.gcd.org>
+
+	* libraries/javalib/kaffe/io/CharToByteConverter.java,
+	libraries/javalib/kaffe/io/ByteToCharConverter.java:
+	(getConverterInternal) Continue if getByteToCharIconv returns null.
+
 2004-10-21  Dalibor Topic  <robilad@kaffe.org>
 
 	* kaffe/kaffevm/gc.h:
